--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/output" />
 
+    <!-- New Page Button -->
+    <Button
+        android:id="@+id/newPageButton"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/teal_200"
+        android:text="New page"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
